Plots: include additional archived runs (#2001)

--- a/plots/index.html
+++ b/plots/index.html
@@ -35,6 +35,16 @@ limitations under the License.
           2017.04.06 ~70 sites for ~9 runs (ended with OOM)
         </a>
       </li>
+      <li>
+        <a href="./archive/20170411-relaunch-chrome-between-runs/index.html">
+          2017.04.11 ~70 sites for 20 runs - relaunching Chrome between runs. Macbook Pro, Chrome Canary, @ Home.
+        </a>
+      </li>
+      <li>
+        <a href="./archive/20170411-run-from-japan/index.html">
+          2017.04.11 analyze international sites from GCE VM in Japan. (~14 runs). Note: includes some US sites to serve as a baseline.
+        </a>
+      </li>
     </ul>
   </div>
 </body>
