--- a/plots/index.html
+++ b/plots/index.html
@@ -32,6 +32,11 @@ limitations under the License.
     <ul>
       <li>
         <a href="./archive/20170411-run-from-japan/index.html">
+          2017.05.07 11 PWAs with TTFI and TTCI
+        </a>
+      </li>
+      <li>
+        <a href="./archive/20170411-run-from-japan/index.html">
           2017.04.11 analyze international sites from GCE VM in Japan. (~14 runs). Note: includes some US sites to serve as a baseline.
         </a>
       </li>
