--- a/plots/index.html
+++ b/plots/index.html
@@ -31,9 +31,7 @@ limitations under the License.
     <h1>Lighthouse Plots</h1>
     <ul>
       <li>
-        <a href="./archive/20170411-run-from-japan/index.html">
-          2017.05.07 11 PWAs with TTFI and TTCI
-        </a>
+          2017.05.07 11 PWAs with TTFI and TTCI. <a href="./archive/20170507-fici-11-sites-30-runs/metrics-per-site.html">grouped by site</a>, <a href="./archive/20170507-fici-11-sites-30-runs/index.html">grouped by metric</a>
       </li>
       <li>
         <a href="./archive/20170411-run-from-japan/index.html">
