add todays plot results.

--- a/plots/index.html
+++ b/plots/index.html
@@ -31,22 +31,24 @@ limitations under the License.
     <h1>Lighthouse Plots</h1>
     <ul>
       <li>
-          2017.05.07 11 PWAs with TTFI and TTCI. <a href="./archive/20170507-fici-11-sites-30-runs/metrics-per-site.html">grouped by site</a>, <a href="./archive/20170507-fici-11-sites-30-runs/index.html">grouped by metric</a>
+          2017.05.09: 46 sites / 3 runs. TTFI, TTCI, vc95. <a href="./archive/20170509-fici-46-sites-3-runs/metrics-per-site.html">grouped by site</a>, <a href="./archive/20170509-fici-46-sites-3-runs/index.html">grouped by metric</a>
       </li>
       <li>
-        <a href="./archive/20170411-run-from-japan/index.html">
-          2017.04.11 analyze international sites from GCE VM in Japan. (~14 runs). Note: includes some US sites to serve as a baseline.
-        </a>
+          2017.05.07: 11 PWAs  / 30 runs. with TTFI and TTCI. <a href="./archive/20170507-fici-11-sites-30-runs/metrics-per-site.html">grouped by site</a>, <a href="./archive/20170507-fici-11-sites-30-runs/index.html">grouped by metric</a>
       </li>
       <li>
-        <a href="./archive/20170411-relaunch-chrome-between-runs/index.html">
-          2017.04.11 ~70 sites for 20 runs - relaunching Chrome between runs. Macbook Pro, Chrome Canary, @ Home.
-        </a>
+        2017.04.11: 
+        <a href="./archive/20170411-run-from-japan/index.html">analyze international sites from GCE VM in Japan.</a>
+        (~14 runs). Note: includes some US sites to serve as a baseline.
       </li>
       <li>
-        <a href="./archive/20170406-70-sites-9-runs-oom/index.html">
-          2017.04.06 ~70 sites for ~9 runs (ended with OOM)
-        </a>
+        2017.04.11:
+        <a href="./archive/20170411-relaunch-chrome-between-runs/index.html">~70 sites / 20 runs  - relaunching Chrome between runs.</a>
+        Macbook Pro, Chrome Canary, @ Home.
+      </li>
+      <li>
+        2017.04.06: 
+        <a href="./archive/20170406-70-sites-9-runs-oom/index.html">~70 sites / ~9 runs (ended with OOM)</a>
       </li>
     </ul>
   </div>
