add run for b880393

--- a/plots/index.html
+++ b/plots/index.html
@@ -31,6 +31,9 @@ limitations under the License.
     <h1>Lighthouse Plots</h1>
     <ul>
       <li>
+          2017.05.11 at <a href="https://github.com/GoogleChrome/lighthouse/commit/b880393">b880393</a>: 11 PWAs  / 30 runs. with TTFI and TTCI. <a href="./archive/20170511-fici-11-sites-30-runs/metrics-per-site.html">grouped by site</a>, <a href="./archive/20170511-fici-11-sites-30-runs/index.html">grouped by metric</a>
+      </li>
+      <li>
           2017.05.09: 46 sites / 3 runs. TTFI, TTCI, vc95. <a href="./archive/20170509-fici-46-sites-3-runs/metrics-per-site.html">grouped by site</a>, <a href="./archive/20170509-fici-46-sites-3-runs/index.html">grouped by metric</a>
       </li>
       <li>
