--- a/viewer/index.html
+++ b/viewer/index.html
@@ -233,7 +233,7 @@ Unless required by applicable law or agreed to in writing, software distributed 
       background-position: 9px 50%;
     }
     /* save-as-gist option hidden in report */
-    .lh-export--gist {
+    .lh-export__dropdown .lh-export--gist {
       display: none;
     }
     .lh-config {
