--- a/viewer/index.html
+++ b/viewer/index.html
@@ -472,6 +472,7 @@ Unless required by applicable law or agreed to in writing, software distributed 
       font-size: var(--body-font-size);
       line-height: var(--body-line-height);
       margin-top: calc(0.5 * var(--body-line-height));
+      text-align: center;
     }
   </style>
   <a href="#" class="lh-gauge__wrapper">
