--- a/lighthouse-cli/test/fixtures/dobetterweb/dbw_tester.html
+++ b/lighthouse-cli/test/fixtures/dobetterweb/dbw_tester.html
@@ -126,8 +126,14 @@
   <a href="https://www.google.com/" target="_blank" rel="nofollow">external link</a>
   <!-- PASS - external link correctly uses rel="noopener" and an additional rel value -->
   <a href="https://www.google.com/" target="_blank" rel="noopener nofollow">external link that uses rel noopener and another unrelated rel attribute</a>
+  <!-- PASS - external link correctly uses rel="noreferrer" and an additional rel value -->
+  <a href="https://www.google.com/" target="_blank" rel="noreferrer nofollow">external link that uses rel noreferrer and another unrelated rel attribute</a>
   <!-- PASS - external link correctly uses rel="noopener" -->
   <a href="https://www.google.com/" target="_blank" rel="noopener">external link that uses rel noopener</a>
+  <!-- PASS - external link correctly uses rel="noreferrer" -->
+  <a href="https://www.google.com/" target="_blank" rel="noreferrer">external link that uses rel noreferrer</a>
+  <!-- PASS - external link correctly uses rel="noopener" and rel="noreferrer" -->
+  <a href="https://www.google.com/" target="_blank" rel="noopener noreferrer">external link that uses rel noopener and noreferrer</a>
   <!-- PASS - internal link without rel="noopener" -->
   <a href="./doesnotexist" target="_blank">internal link is ok</a>
   <!-- PASS - href uses javascript: -->
