report: rework the DOM of audits (#5045)
* driveby: update nodeTimings types

--- a/lighthouse-core/report/html/report-template.html
+++ b/lighthouse-core/report/html/report-template.html
@@ -20,7 +20,9 @@ Unless required by applicable law or agreed to in writing, software distributed 
 
   <div id="lh-log"></div>
 
-  <script>%%LIGHTHOUSE_JAVASCRIPT%%</script>
+  <script>%%LIGHTHOUSE_JAVASCRIPT%%
+  //# sourceURL=compiled-reportrenderer.js
+  </script>
   <script>window.__LIGHTHOUSE_JSON__ = %%LIGHTHOUSE_JSON%%;</script>
   <script>
     window.addEventListener('DOMContentLoaded', _ => {
