--- a/lighthouse-cli/test/fixtures/dobetterweb/dbw_tester.html
+++ b/lighthouse-cli/test/fixtures/dobetterweb/dbw_tester.html
@@ -156,6 +156,8 @@
 <!-- PASS(image-aspect-ratio) -->
 <img src="lighthouse-480x318.jpg" width="480" height="318">
 
+<!-- FAIL(efficient-animated-content): animated gif found -->
+<img src="lighthouse-rotating.gif" width="811" height="462">
 
 <!-- Some websites overwrite the original Error object. The captureJSCallUsage function
   relies on the native Error object and prepareStackTrace from V8. When overwriting the stack
