--- a/lighthouse-core/report/html/templates.html
+++ b/lighthouse-core/report/html/templates.html
@@ -43,10 +43,12 @@
 <!-- Lighthouse perf metric -->
 <template id="tmpl-lh-perf-metric">
 
-  <div class="lh-perf-metric tooltip-boundary">
-    <span class="lh-perf-metric__title"></span>
-    <div class="lh-perf-metric__value"><span></span></div>
-    <div class="lh-perf-metric__description tooltip"></div>
+  <div class="lh-perf-metric">
+    <div class="lh-perf-metric__innerwrap tooltip-boundary">
+      <span class="lh-perf-metric__title"></span>
+      <div class="lh-perf-metric__value"><span></span></div>
+      <div class="lh-perf-metric__description tooltip"></div>
+    </div>
   </div>
 
 </template>
