report: error'd audits get 'Error!' treatment (#5077)

--- a/lighthouse-core/report/html/templates.html
+++ b/lighthouse-core/report/html/templates.html
@@ -46,7 +46,7 @@
   <div class="lh-perf-metric">
     <div class="lh-perf-metric__innerwrap tooltip-boundary">
       <span class="lh-perf-metric__title"></span>
-      <div class="lh-perf-metric__value"><span></span></div>
+      <div class="lh-perf-metric__value"></div>
       <div class="lh-perf-metric__description tooltip"></div>
     </div>
   </div>
