core(lhr): rename perf-hint, perf-info, etc (#5102)

--- a/lighthouse-core/report/html/templates.html
+++ b/lighthouse-core/report/html/templates.html
@@ -41,13 +41,13 @@
 </template>
 
 <!-- Lighthouse perf metric -->
-<template id="tmpl-lh-perf-metric">
+<template id="tmpl-lh-metric">
 
-  <div class="lh-perf-metric">
-    <div class="lh-perf-metric__innerwrap tooltip-boundary">
-      <span class="lh-perf-metric__title"></span>
-      <div class="lh-perf-metric__value"></div>
-      <div class="lh-perf-metric__description tooltip"></div>
+  <div class="lh-metric">
+    <div class="lh-metric__innerwrap tooltip-boundary">
+      <span class="lh-metric__title"></span>
+      <div class="lh-metric__value"></div>
+      <div class="lh-metric__description tooltip"></div>
     </div>
   </div>
 
