--- a/lighthouse-core/report/html/templates.html
+++ b/lighthouse-core/report/html/templates.html
@@ -19,7 +19,6 @@
 <!-- Lighthouse category header -->
 <template id="tmpl-lh-category-header">
   <div class="lh-category-header">
-    <div class="lh-score__value"></div>
     <div class="lh-score__gauge"></div>
     <span class="lh-category-header__title"></span>
     <div class="lh-category-header__description"></div>
@@ -29,10 +28,12 @@
 <!-- Lighthouse audit -->
 <template id="tmpl-lh-audit">
   <div class="lh-audit">
-    <div class="lh-score__value"></div>
-    <details class="lh-audit__header lh-expandable-details">
-      <summary class="lh-expandable-details__summary">
+    <details class="lh-expandable-details">
+      <summary class="lh-audit__header lh-expandable-details__summary">
+        <span class="lh-audit__index"></span>
         <span class="lh-audit__title"></span>
+        <span class="lh-audit__display-text"></span>
+        <div class="lh-audit__score-icon"></div>
         <div class="lh-toggle-arrow" title="See audits"></div>
       </summary>
       <div class="lh-audit__description"></div>
@@ -81,13 +82,13 @@
     .leftnav-item__score::after {
       content: '';
     }
-    .leftnav-item__score.lh-score__value--pass {
+    .leftnav-item__score.lh-audit--pass {
       color: var(--pass-color);
     }
-    .leftnav-item__score.lh-score__value--average {
+    .leftnav-item__score.lh-audit--average {
       color: var(--average-color);
     }
-    .leftnav-item__score.lh-score__value--fail {
+    .leftnav-item__score.lh-audit--fail {
       color: var(--fail-color);
     }
     .leftnav__header {
