report: implement new design for opportunities (#5115)

--- a/lighthouse-core/report/html/templates.html
+++ b/lighthouse-core/report/html/templates.html
@@ -43,7 +43,6 @@
 
 <!-- Lighthouse perf metric -->
 <template id="tmpl-lh-metric">
-
   <div class="lh-metric">
     <div class="lh-metric__innerwrap tooltip-boundary">
       <span class="lh-metric__title"></span>
@@ -51,7 +50,41 @@
       <div class="lh-metric__description tooltip"></div>
     </div>
   </div>
+</template>
 
+<!-- Lighthouse perf opportunity -->
+<template id="tmpl-lh-opportunity">
+  <details class="lh-load-opportunity lh-expandable-details">
+    <summary class="lh-load-opportunity__summary lh-expandable-details__summary">
+      <div class="lh-load-opportunity__cols">
+        <div class="lh-load-opportunity__col lh-load-opportunity__col--one">
+          <span class="lh-audit__index"></span>
+          <div class="lh-load-opportunity__title"></div>
+        </div>
+        <div class="lh-load-opportunity__col lh-load-opportunity__col--two">
+          <div class="lh-load-opportunity__sparkline">
+            <div class="lh-sparkline"><div class="lh-sparkline__bar"></div></div>
+          </div>
+          <div class="lh-load-opportunity__wasted-stat"></div>
+          <div class="lh-toggle-arrow" title="See resources"></div>
+        </div>
+      </div>
+    </summary>
+    <div class="lh-load-opportunity__description"></div>
+  </details>
+</template>
+
+
+<!-- Lighthouse perf opportunity header -->
+<template id="tmpl-lh-opportunity-header">
+  <div class="lh-load-opportunity__header lh-load-opportunity__cols">
+    <div class="lh-load-opportunity__col lh-load-opportunity__col--one">
+      Resource to optimize
+    </div>
+    <div class="lh-load-opportunity__col lh-load-opportunity__col--two">
+      Estimated Savings
+    </div>
+  </div>
 </template>
 
 <!-- Lighthouse left nav -->
