--- a/lighthouse-cli/test/fixtures/tricky-tti.html
+++ b/lighthouse-cli/test/fixtures/tricky-tti.html
@@ -1,7 +1,7 @@
 <html>
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
 <body>
-  Just try and figure out my TTCI (hint: it should be ~10s)
+  Just try and figure out my TTI (hint: it should be ~10s)
 
   <script>
     /**
