--- a/lighthouse-extension/app/popup.html
+++ b/lighthouse-extension/app/popup.html
@@ -22,6 +22,16 @@ Unless required by applicable law or agreed to in writing, software distributed 
     <div class="header-titles">
       <h1 class="header-titles__main">Lighthouse</h1>
       <h2 class="header-titles__url">...</h2>
+      <div class="header-titles__throttling">
+        <label for="lantern-checkbox">
+          <input
+            id="lantern-checkbox"
+            type="checkbox"
+            checked />
+          Simulate throttling for performance audits (faster)
+          <span class="header-titles__new-adornment">NEW!</span>
+        </label>
+      </div>
     </div>
   </header>
 
