report: audit warnings are no longer top-level (#5270)

--- a/lighthouse-core/report/html/templates.html
+++ b/lighthouse-core/report/html/templates.html
@@ -1,6 +1,6 @@
 <!-- Lighthouse run warnings -->
-<template id="tmpl-lh-run-warnings">
-  <div class="lh-run-warnings lh-debug">
+<template id="tmpl-lh-warnings--toplevel">
+  <div class="lh-warnings lh-warnings--toplevel">
     <strong>There were issues affecting this run of Lighthouse:</strong>
     <ul></ul>
   </div>
