tests(dbw): remove createShadowRoot call (#5906)

--- a/lighthouse-cli/test/fixtures/dobetterweb/dbw_tester.html
+++ b/lighthouse-cli/test/fixtures/dobetterweb/dbw_tester.html
@@ -308,7 +308,7 @@ function deprecationsTest() {
   xhr.open('GET', 'dbw_tester.html', false);
   xhr.send();
 
-  window.webkitStorageInfo.PERSISTENT // FAIL
+  // One more failure in dbw_tester.js
 }
 
 function isOnHttps() {
