--- a/lighthouse-cli/test/fixtures/seo/seo-tap-targets.html
+++ b/lighthouse-cli/test/fixtures/seo/seo-tap-targets.html
@@ -20,7 +20,7 @@
   </style>
 </head>
 <body>
-  <!-- Big tap targets, but it's invisible because it's behind the main content div -->
+  <!-- Big tap target, but it's invisible because it's behind the main content div -->
   <a style="background: red; position: absolute; top: 0; bottom: 0; left: 0; right: 0; z-index: -1;"></a>
   <div style="background: white; padding: 20px;">
     <h1>SEO Tap targets</h1>
