Smoke test for overlapping tap targets with same href

--- a/lighthouse-cli/test/fixtures/seo/seo-tap-targets.html
+++ b/lighthouse-cli/test/fixtures/seo/seo-tap-targets.html
@@ -88,6 +88,14 @@
       </a>
     </div>
 
+    <br/><br/>
+
+    <!-- Should not fail if the two links have the same link target -->
+    <div>
+      <a style="display: block; width: 10px; height: 10px;" href="../seo/"></a>
+      <a style="display: block; width: 10px; height: 10px;" href="./"></a>
+    </div>
+
     <!-- Links in text blocks are exempted from size/overlap requirements and should not fail -->
     <p style="width: 100px">
       This is <a>a link in a text block.</a>
