--- a/lighthouse-cli/test/fixtures/seo/seo-tap-targets.html
+++ b/lighthouse-cli/test/fixtures/seo/seo-tap-targets.html
@@ -78,6 +78,13 @@
 
     <br/><br/>
 
+    <div style="position: relative">
+      <a style="display: block; position: absolute; top:0; height: 40px; width: 40px;">inner</a>
+      <a style="display: block; height: 100px; width: 100px; background: yellowgreen">outer</a>
+    </div>
+
+    <br/><br/>
+
     <!-- Only target that's being overlapped should fail, the overlapping one shouldn't -->
     <div>
       <a style="display: block; width: 100px; height: 30px;background: #ddd;">
